@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2019-04-26 r76428) -- "Unsuffered Consequences"
+R Under development (unstable) (2019-05-09 r76477) -- "Unsuffered Consequences"
 Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -3131,18 +3131,125 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 > plot(approxfun(x, y, rule = 2:1), 0, 11,
 +      col = "tomato", add = TRUE, lty = 3, lwd = 2)
 > 
+> ### Treatment of 'NA's -- are kept if  na.rm=FALSE :
+> 
+> xn <- 1:4
+> yn <- c(1,NA,3:4)
+> xout <- (1:9)/2
+> ## Default behavior (na.rm = TRUE): NA's omitted; extrapolation gives NA
+> data.frame(approx(xn,yn, xout))
+    x   y
+1 0.5  NA
+2 1.0 1.0
+3 1.5 1.5
+4 2.0 2.0
+5 2.5 2.5
+6 3.0 3.0
+7 3.5 3.5
+8 4.0 4.0
+9 4.5  NA
+> data.frame(approx(xn,yn, xout, rule = 2))# -> *constant* extrapolation
+    x   y
+1 0.5 1.0
+2 1.0 1.0
+3 1.5 1.5
+4 2.0 2.0
+5 2.5 2.5
+6 3.0 3.0
+7 3.5 3.5
+8 4.0 4.0
+9 4.5 4.0
+> ## New (2019-2020)  na.rm = FALSE: NA's are "kept"
+> data.frame(approx(xn,yn, xout, na.rm=FALSE, rule = 2))
+    x   y
+1 0.5 1.0
+2 1.0 1.0
+3 1.5  NA
+4 2.0  NA
+5 2.5  NA
+6 3.0 3.0
+7 3.5 3.5
+8 4.0 4.0
+9 4.5 4.0
+> data.frame(approx(xn,yn, xout, na.rm=FALSE, rule = 2, method="constant"))
+    x  y
+1 0.5  1
+2 1.0  1
+3 1.5  1
+4 2.0 NA
+5 2.5 NA
+6 3.0  3
+7 3.5  3
+8 4.0  4
+9 4.5  4
+> 
+> ## NA's in x[] are not allowed:
+> stopifnot(inherits( try( approx(yn,yn, na.rm=FALSE) ), "try-error"))
+Error in approx(yn, yn, na.rm = FALSE) : 
+  approx(x,y, .., na.rm=FALSE): NA values in x are not allowed
+> 
+> ## Give a nice overview of all possibilities  rule * method * na.rm :
+> ##             -----------------------------  ====   ======   =====
+> ## extrapolations "N":= NA;   "C":= Constant :
+> rules <- list(N=1, C=2, NC=1:2, CN=2:1)
+> methods <- c("constant","linear")
+> ry <- sapply(rules, function(R) {
++        sapply(methods, function(M)
++         sapply(setNames(,c(TRUE,FALSE)), function(na.)
++                  approx(xn, yn, xout=xout, method=M, rule=R, na.rm=na.)$y),
++         simplify="array")
++    }, simplify="array")
+> names(dimnames(ry)) <- c("x = ", "na.rm", "method", "rule")
+> dimnames(ry)[[1]] <- format(xout)
+> ftable(aperm(ry, 4:1)) # --> (4 * 2 * 2) x length(xout)  =  16 x 9 matrix
+                    x =  0.5 1.0 1.5 2.0 2.5 3.0 3.5 4.0 4.5
+rule method   na.rm                                         
+N    constant TRUE        NA 1.0 1.0 1.0 1.0 3.0 3.0 4.0  NA
+              FALSE       NA 1.0 1.0  NA  NA 3.0 3.0 4.0  NA
+     linear   TRUE        NA 1.0 1.5 2.0 2.5 3.0 3.5 4.0  NA
+              FALSE       NA 1.0  NA  NA  NA 3.0 3.5 4.0  NA
+C    constant TRUE       1.0 1.0 1.0 1.0 1.0 3.0 3.0 4.0 4.0
+              FALSE      1.0 1.0 1.0  NA  NA 3.0 3.0 4.0 4.0
+     linear   TRUE       1.0 1.0 1.5 2.0 2.5 3.0 3.5 4.0 4.0
+              FALSE      1.0 1.0  NA  NA  NA 3.0 3.5 4.0 4.0
+NC   constant TRUE        NA 1.0 1.0 1.0 1.0 3.0 3.0 4.0 4.0
+              FALSE       NA 1.0 1.0  NA  NA 3.0 3.0 4.0 4.0
+     linear   TRUE        NA 1.0 1.5 2.0 2.5 3.0 3.5 4.0 4.0
+              FALSE       NA 1.0  NA  NA  NA 3.0 3.5 4.0 4.0
+CN   constant TRUE       1.0 1.0 1.0 1.0 1.0 3.0 3.0 4.0  NA
+              FALSE      1.0 1.0 1.0  NA  NA 3.0 3.0 4.0  NA
+     linear   TRUE       1.0 1.0 1.5 2.0 2.5 3.0 3.5 4.0  NA
+              FALSE      1.0 1.0  NA  NA  NA 3.0 3.5 4.0  NA
+> ## Don't show: 
+> stopifnot(exprs = {
++  identical(unname(ry),
++    array(c(NA, 1, 1,   1, 1, 3, 3, 4, NA,      NA, 1,  1, NA, NA, 3, 3, 4, NA,
++            NA, 1, 1.5, 2, 2.5, 3, 3.5, 4, NA,  NA, 1, NA, NA, NA, 3, 3.5, 4, NA,
++             1, 1, 1,   1, 1, 3, 3, 4, 4,        1, 1,  1, NA, NA, 3, 3, 4, 4,
++             1, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4,    1, 1, NA, NA, NA, 3, 3.5, 4, 4,
++            NA, 1, 1,   1, 1, 3, 3, 4, 4,       NA, 1,  1, NA, NA, 3, 3, 4, 4,
++            NA, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4,   NA, 1, NA, NA, NA, 3, 3.5, 4, 4,
++             1, 1, 1,   1, 1, 3, 3, 4, NA,       1, 1,  1, NA, NA, 3, 3, 4, NA,
++             1, 1, 1.5, 2, 2.5, 3, 3.5, 4, NA,   1, 1, NA, NA, NA, 3, 3.5, 4, NA),
++          dim = c(9L, 2L, 2L, 4L)))
++  identical(approxfun(xn,yn, method="constant", rule=2, na.rm=FALSE)(xout),
++             as.vector(ry[,"FALSE", "constant","C"]))
++  identical(approxfun(xn,yn, method="linear", rule=2:1, na.rm=FALSE)(xout),
++             as.vector(ry[,"FALSE", "linear", "CN"]))
++ })
+> ## End(Don't show)
+> 
 > ## Show treatment of 'ties' :
 > 
 > x <- c(2,2:4,4,4,5,5,7,7,7)
 > y <- c(1:6, 5:4, 3:1)
 > (amy <- approx(x, y, xout = x)$y) # warning, can be avoided by specifying 'ties=':
-Warning in regularize.values(x, y, ties, missing(ties)) :
+Warning in regularize.values(x, y, ties, missing(ties), na.rm = na.rm) :
   collapsing to unique 'x' values
  [1] 1.5 1.5 3.0 5.0 5.0 5.0 4.5 4.5 2.0 2.0 2.0
 > op <- options(warn=2) # warnings would be error
 > stopifnot(identical(amy, approx(x, y, xout = x, ties=mean)$y))
-> options(op) # revert
-> (ay  <- approx(x, y, xout = x, ties = "ordered")$y)
+> (ay <- approx(x, y, xout = x, ties = "ordered")$y)
  [1] 2 2 3 6 6 6 4 4 1 1 1
 > stopifnot(amy == c(1.5,1.5, 3, 5,5,5, 4.5,4.5, 2,2,2),
 +           ay  == c(2, 2,    3, 6,6,6, 4, 4,    1,1,1))
@@ -3150,7 +3257,7 @@ Warning in regularize.values(x, y, ties, missing(ties)) :
  [1] 1 1 3 4 4 4 4 4 1 1 1
 > approx(x, y, xout = x, ties = max)$y
  [1] 2 2 3 6 6 6 5 5 3 3 3
-> 
+> options(op) # revert 'warn'ing level
 > 
 > 
 > 
@@ -6609,11 +6716,12 @@ and	9 plateau levels (y) with summary
 > 
 > ## Advanced: What's inside the function closure?
 > ls(environment(Fn12))
-[1] "f"      "method" "nobs"   "x"      "y"      "yleft"  "yright"
-> ##[1] "f"  "method"  "n"  "x"  "y"  "yleft"  "yright"
+[1] "f"      "method" "na.rm"  "nobs"   "x"      "y"      "yleft"  "yright"
+> ## "f"     "method" "na.rm"  "nobs"   "x"     "y"    "yleft"  "yright"
 > utils::ls.str(environment(Fn12))
 f :  num 0
 method :  int 2
+na.rm :  logi TRUE
 nobs :  int 12
 x :  num [1:8] -2.2 -2 -0.6 0 0.1 0.6 0.8 0.9
 y :  num [1:8] 0.0833 0.1667 0.3333 0.5 0.5833 ...
@@ -7018,7 +7126,7 @@ List of 12
  $ dev.resids:function (y, mu, wt)  
  $ aic       :function (y, n, mu, wt, dev)  
  $ mu.eta    :function (eta)  
- $ initialize:  expression({  if (any(y <= 0))  stop("non-positive values not allowed for the 'gamma' family")  n <- rep.int(1, n| __truncated__
+ $ initialize:  expression({  if (any(y <= 0))  stop("non-positive values not allowed for the 'Gamma' family")  n <- rep.int(1, n| __truncated__
  $ validmu   :function (mu)  
  $ valideta  :function (eta)  
  $ simulate  :function (object, nsim)  
@@ -16318,13 +16426,13 @@ Step function with continuity 'f'= 0.2 ,  3 knots at
 > ## look at the internal structure:
 > unclass(sfun0)
 function (v) 
-.approxfun(x, y, v, method, yleft, yright, f)
+.approxfun(x, y, v, method, yleft, yright, f, na.rm)
 <bytecode: 0x3731bc8>
 <environment: 0x4a315e8>
 attr(,"call")
 stepfun(1:3, y0, f = 0)
 > ls(envir = environment(sfun0))
-[1] "f"      "method" "x"      "y"      "yleft"  "yright"
+[1] "f"      "method" "na.rm"  "x"      "y"      "yleft"  "yright"
 > 
 > x0 <- seq(0.5, 3.5, by = 0.25)
 > rbind(x = x0, f.f0 = sfun0(x0), f.f02 = sfun.2(x0),
@@ -18645,7 +18753,7 @@ Number of Fisher Scoring iterations: 6
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  6.41 0.204 6.649 0 0 
+Time elapsed:  3.725 0.161 4.013 0 0 
 > grDevices::dev.off()
 null device 
           1 
